--- a/style/wallpaper.css
+++ b/style/wallpaper.css
@@ -1,8 +1,3 @@
-body {
-	background-color: #e0e0e0;
-	font-family: Arial, sans-serif;
-	margin: 0;
-}
 .image-container {
 	position: relative;
 	display: inline-block;
@@ -43,4 +38,8 @@ img {
 
 .image-container:hover .arrow {
 	display: block;
+}
+
+.container {
+	max-width: 100%;
 }
